# OpenVSP

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README  README.md  TestScript.as  TestXSec.fxs  appveyor.yml  changelog.sh  vsp.astylerc
src/: APIReadme.md.in  CMakeLists.txt  Doxyfile.in  MacOSXBundleInfo-custom.plist.in  vsp.icns
src/cfd_mesh/: BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  CfdMeshMgr.cpp  CfdMeshMgr.h  Face.cpp  Face.h  FeaElement.cpp  FeaElement.h  FeaMesh.cpp  FeaMesh.h  FeaMeshMgr.cpp  FeaMeshMgr.h  FeaPart.cpp  FeaPart.h  ICurve.cpp  ICurve.h  ISegChain.cpp  ISegChain.h  IntersectPatch.cpp  IntersectPatch.h  MapSource.h  Mesh.cpp  Mesh.h  MeshAnalysis.cpp  MeshAnalysis.h  NURBS.cpp  NURBS.h  SCurve.cpp  SCurve.h  SimpleBC.cpp  SimpleBC.h  SimpleMeshSettings.cpp  SimpleMeshSettings.h  SimpleSubSurface.cpp  SimpleSubSurface.h  Surf.cpp  Surf.h  SurfCore.cpp  SurfCore.h  (+8 more)
src/cfd_mesh_stuff/: BezierCurve.h  CMakeLists.txt  CfdMeshMgr.cpp  CfdMeshMgr.h  FeaMeshMgr.cpp  FeaMeshMgr.h  FeaPart.cpp  FeaPart.h  ICurve.cpp  ISegChain.cpp  ISegChain.h  IntersectPatch.h  MapSource.h  Mesh.cpp  Mesh.h  SCurve.cpp  SCurve.h  Surf.cpp  Surf.h  Tri.cpp  Tri.h
src/cmake/: CreateVirtualEnvironment.cmake  External_STEPCode.cmake  FindANGELSCRIPT.cmake  FindCMINPACK.cmake  FindCMinpack.cmake  FindCPPTest.cmake  FindClipper2.cmake  FindCodeEli.cmake  FindGLEW_VSP.cmake  FindGLM.cmake  FindJPEG_VSP.cmake  FindPythonLibsNew.cmake  FindSTEPCODE.cmake  FindTRIANGLE.cmake  Finddelabella.cmake  Findexprparse.cmake  Findpinocchio.cmake  IdentifyLibs.cmake  Info.plist.in  OpenVSP-launcher.m  OpenVSP-launcher.sh  PrintAllProperties.cmake  SetupC++11.cmake  Today.cmake  VSP_Version.cmake  cmspandoc.cmake  extLibraryFind.cmake  pandocology.cmake  postinst  postrm
src/fltk_screens/: CMakeLists.txt  aboutScreen.fl  advLinkFlScreen.fl  aeroRefScreen.fl  awaveFlScreen.fl  backgroundScreen.fl  cabinLayoutFLScreen.fl  cfdMeshFlScreen.fl  compGeomFlScreen.fl  curveEditFlScreen.fl  degenGeomFlScreen.fl  ductFlScreen.fl  engineFlScreen.fl  exportFileScreen.fl  extStoreFlScreen.fl  feaStructFlScreen.fl  geomBrowserScreen.fl  groupFlScreen.fl  havocFlScreen.fl  hrmFlScreen.fl  hwbFlScreen.fl  importFileScreen.fl  labelFlScreen.fl  lightingScreen.fl  mainScreen.fl  massPropFlScreen.fl  msWingFlScreen.fl  pSliceFlScreen.fl  parmFlScreen.fl  parmLinkFlScreen.fl  pickSetFlScreen.fl  propFlScreen.fl  rulerScreen.fl  scriptOutScreen.fl  scriptScreen.fl  selectFileFlScreen.fl  setEditorFlScreen.fl  sliceScreen.fl  structureBrowserScreen.fl  testFlScreen.fl  (+7 more)
src/geom_api/: APIDefines.h  APIErrorMgr.cpp  APIErrorMgr.h  APITestSuite.cpp  APITestSuite.h  APITestSuiteCFDMesh.cpp  APITestSuiteCFDMesh.h  APITestSuiteMassProp.cpp  APITestSuiteMassProp.h  APITestSuiteParasiteDrag.cpp  APITestSuiteParasiteDrag.h  APITestSuiteVSPAERO.cpp  APITestSuiteVSPAERO.h  APIUpdateCountMgr.cpp  APIUpdateCountMgr.h  CMakeLists.txt  GuiInterface.cpp  GuiInterface.h  VSP_Geom_API.cpp  VSP_Geom_API.h  numpy.i  vsp_common.i  vsp_g.i  vsp_g_python.i  vsp_python.i
src/geom_core/: AdvLink.cpp  AdvLink.h  AdvLinkMgr.cpp  AdvLinkMgr.h  AeroStructMgr.cpp  AeroStructMgr.h  Airfoil.cpp  Airfoil.h  AnalysisMgr.cpp  AnalysisMgr.h  Atmosphere.cpp  Atmosphere.h  AttributeManager.cpp  AttributeManager.h  AuxiliaryGeom.cpp  AuxiliaryGeom.h  BORGeom.cpp  BORGeom.h  Background3D.cpp  Background3D.h  Background3DMgr.cpp  Background3DMgr.h  BlankGeom.cpp  BlankGeom.h  CMakeLists.txt  CfdMeshSettings.cpp  CfdMeshSettings.h  ClearanceGeom.cpp  ClearanceGeom.h  ClippingMgr.cpp  ClippingMgr.h  CobraGeom.cpp  CobraGeom.h  Color.cpp  Color.h  ColorMgr.cpp  ColorMgr.h  ConformalGeom.cpp  ConformalGeom.h  CustomGeom.cpp  (+161 more)
src/gui_and_draw/: AdvLinkScreen.cpp  AdvLinkScreen.h  AdvLinkVarRenameScreen.cpp  AdvLinkVarRenameScreen.h  AeroStructScreen.cpp  AeroStructScreen.h  AirfoilExportScreen.cpp  AirfoilExportScreen.h  AttributeEditor.cpp  AttributeEditor.h  AttributeScreen.cpp  AttributeScreen.h  AuxiliaryGeomScreen.cpp  AuxiliaryGeomScreen.h  AwaveScreen.cpp  AwaveScreen.h  BEMOptionsScreen.cpp  BEMOptionsScreen.h  BORScreen.cpp  BORScreen.h  BlankScreen.cpp  BlankScreen.h  CMakeLists.txt  CfdMeshScreen.cpp  CfdMeshScreen.h  ClearanceScreen.cpp  ClearanceScreen.h  ClippingScreen.cpp  ClippingScreen.h  CobraScreen.cpp  CobraScreen.h  CompGeomScreen.cpp  CompGeomScreen.h  ConformalScreen.cpp  ConformalScreen.h  CurveEditScreen.cpp  CurveEditScreen.h  CustomGeomExportScreen.cpp  CustomGeomExportScreen.h  CustomScreen.cpp  (+174 more)
src/help/: AdvLink.md  AttributeExplorer.md  CMakeLists.txt  DesignVariables.md  GeometryAnalysis.md  SetEdit.md  StackPresets.md  github-pandoc.css  index.md  links-to-html.lua  vsp_help
src/load_jpg/: CMakeLists.txt  loadjpg.c  loadjpg.h
src/matlab_api/: APITestMain.m  APITestSuiteVSPAERO_test.m  APITestSuite_test.m  CMakeLists.txt  assert_delta.m  vsp.i  vsp_common.i
src/nanoflann/: CMakeLists.txt
src/python_api/: CMakeLists.txt  TestSurfQuery.py  Tutorial.ipynb  api.py  auto_facade.py  gen_unit_test.py  test.py  vsp.i  vsp_common.i  vsp_g.i
src/screens/: CMakeLists.txt  aboutScreen.fl  aeroRefScreen.fl  awaveScreen.fl  backgroundScreen.fl  blankFlScreen.fl  cabinLayoutFLScreen.fl  cfdMeshFlScreen.fl  compGeomScreen.fl  curveEditFlScreen.fl  ductFlScreen.fl  engineFlScreen.fl  exportFileScreen.fl  extStoreFlScreen.fl  feaStructFlScreen.fl  fuseFlScreen.fl  fuselageFlScreen.fl  geomBrowserScreen.fl  groupFlScreen.fl  havocFlScreen.fl  hrmFlScreen.fl  hwbFlScreen.fl  importFileScreen.fl  keyHelpScreen.fl  labelFlScreen.fl  lightingScreen.fl  mainScreen.fl  massPropScreen.fl  meshFlScreen.fl  msWingFlScreen.fl  parmFlScreen.fl  parmLinkFlScreen.fl  parmPickerFlScreen.fl  podScreen.fl  propFlScreen.fl  rulerScreen.fl  scriptOutScreen.fl  scriptScreen.fl  selectFileFlScreen.fl  sliceScreen.fl  (+7 more)
src/sixseries/: CMakeLists.txt  NACA_6_series.c  NACA_6_series.f  ReadMe.txt  f2c.h  r_sign.c  s_cmp.c  s_copy.c  s_stop.c
src/test/: CMakeLists.txt
src/triangle/: CMakeLists.txt  triangle.c  triangle.h
(+1051 files in other folders)
