CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(GEOM_CORE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Path to geom_core headers")

INCLUDE_DIRECTORIES( 
    ${ANGELSCRIPT_INCLUDE_DIR}
    ${ANGELSCRIPT_ADD_ON_INCLUDE_DIR}
    ${UTIL_INCLUDE_DIR}
    ${CPPTEST_INCLUDE_DIRS} 
    ${LIBXML2_INCLUDE_DIR}
    ${XMLVSP_INCLUDE_DIR}
    ${TRIANGLE_INCLUDE_DIR}
    ${NANOFLANN_INCLUDE_DIR}
    ${CLIPPER_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIR}
    ${CodeEli_INCLUDE_DIRS}
    ${TRITRI_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/geom_api
    ${GEOM_API_INCLUDE_DIR}
    ${CMINPACK_INCLUDE_DIR}
    ${STEPCODE_INCLUDE_DIR}
    ${LIBIGES_INCLUDE_DIR}
    ${WAVEDRAGEL_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIR}
   )

MESSAGE( STATUS "PINOCCHIO_INCLUDE_DIR " ${PINOCCHIO_INCLUDE_DIR})

ADD_LIBRARY(geom_core
AdvLink.cpp
AdvLinkMgr.cpp
Airfoil.cpp
AnalysisMgr.cpp
Atmosphere.cpp
BlankGeom.cpp
BORGeom.cpp
ClippingMgr.cpp
ConformalGeom.cpp
CustomGeom.cpp
DegenGeom.cpp
DesignVarMgr.cpp
EllipsoidGeom.cpp
FeaStructure.cpp
FitModelMgr.cpp
FuselageGeom.cpp
Geom.cpp
GeomCoreTestSuite.cpp
GridDensity.cpp
GroupTransformations.cpp
HingeGeom.cpp
HumanGeom.cpp
Link.cpp
LinkMgr.cpp
MaterialMgr.cpp
Measure.cpp
MeasureMgr.cpp
MeshCommonSettings.cpp
MeshGeom.cpp
ParasiteDragMgr.cpp
Parm.cpp
ParmContainer.cpp
ParmMgr.cpp
ParmUndo.cpp
PCurve.cpp
PodGeom.cpp
ProjectionMgr.cpp
PropGeom.cpp
PtCloudGeom.cpp
ResultsMgr.cpp
ScriptMgr.cpp
SnapTo.cpp
StackGeom.cpp
StructureMgr.cpp
SubSurface.cpp
SubSurfaceMgr.cpp
SVGUtil.cpp
Texture.cpp
TextureMgr.cpp
TMesh.cpp
UserParmContainer.cpp
VarPresetMgr.cpp
Vehicle.cpp
VehicleMgr.cpp
WaveDragMgr.cpp
WingGeom.cpp
WireGeom.cpp
XSec.cpp
XSecCurve.cpp
XSecSurf.cpp
Light.cpp
LightMgr.cpp
Color.cpp
ColorMgr.cpp
VSPAEROMgr.cpp
AdvLink.h
AdvLinkMgr.h
Airfoil.h
AnalysisMgr.h
Atmosphere.h
BlankGeom.h
BORGeom.h
ClippingMgr.h
Color.h
ColorMgr.h
ConformalGeom.h
CustomGeom.h
DegenGeom.h
DesignVarMgr.h
EllipsoidGeom.h
FeaStructure.h
FitModelMgr.h
FuselageGeom.h
Geom.h
GeomCoreTestSuite.h
GridDensity.h
GroupTransformations.h
HingeGeom.h
HumanGeom.h
HumanGeomData.h
Light.h
LightMgr.h
Link.h
LinkMgr.h
MaterialMgr.h
Measure.h
MeasureMgr.h
MeshCommonSettings.h
MeshGeom.h
ParasiteDragMgr.h
Parm.h
ParmContainer.h
ParmMgr.h
ParmUndo.h
PCurve.h
PodGeom.h
ProjectionMgr.h
PropGeom.h
PtCloudGeom.h
ResultsMgr.h
ScriptMgr.h
SnapTo.h
StackGeom.h
StructureMgr.h
SubSurface.h
SubSurfaceMgr.h
SWIGDefines.h
SVGUtil.h
Texture.h
TextureMgr.h
TMesh.h
UserParmContainer.h
VarPresetMgr.h
Vehicle.h
VehicleMgr.h
VSPAEROMgr.h
WaveDragMgr.h
WingGeom.h
WireGeom.h
XSec.h
XSecCurve.h
XSecSurf.h
)

ADD_DEPENDENCIES( geom_core
util
)
