CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(GUI_AND_DRAW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Path to gui_and_draw headers")

INCLUDE_DIRECTORIES( 
    ${NANOFLANN_INCLUDE_DIR}
    ${CLIPPER_INCLUDE_DIR}
    ${LIBXML2_INCLUDE_DIR}
    ${XMLVSP_INCLUDE_DIR}
    ${UTIL_INCLUDE_DIR}
    ${GEOM_CORE_INCLUDE_DIR}
    ${CFD_MESH_INCLUDE_DIR}
    ${FLTK_INCLUDE_DIR}
    ${SCREENS_INCLUDE_DIR}
    ${VSP_GRAPHIC_INCLUDE_DIR}
    ${GLEW_INCLUDE_PATH}
    ${GLM_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIR}
    ${CodeEli_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/geom_api
    ${GEOM_API_INCLUDE_DIR}
    ${STEPCODE_INCLUDE_DIR}
    ${LIBIGES_INCLUDE_DIR}
    ${GUI_AND_DRAW_INCLUDE_DIR}
    ${CARTESIAN_INCLUDE_DIR}
)

ADD_LIBRARY(gui_and_draw
AdvLinkScreen.cpp
AwaveScreen.cpp
BlankScreen.cpp
CfdMeshScreen.cpp
ClippingScreen.cpp
CompGeomScreen.cpp
CustomScreen.cpp
DegenGeomScreen.cpp
DesignVarScreen.cpp
ExportScreen.cpp
FeaStructScreen.cpp
FitModelScreen.cpp
FuselageScreen.cpp
GroupLayout.cpp
GuiDevice.cpp
IGESOptionsScreen.cpp
ImportScreen.cpp
MainGLWindow.cpp
MainGLWindow.cpp
MainVSPScreen.cpp
ManageBackgroundScreen.cpp
ManageCORScreen.cpp
ManageGeomScreen.cpp
ManageLabelScreen.cpp
ManageLightingScreen.cpp
ManageTextureScreen.cpp
ManageViewScreen.cpp
MassPropScreen.cpp
MaterialEditScreen.cpp
MenuItem.cpp
MeshScreen.cpp
ParmDebugScreen.cpp
ParmLinkScreen.cpp
ParmScreen.cpp
PickSetScreen.cpp
PodScreen.cpp
ProjectionScreen.cpp
PSliceScreen.cpp
PtCloudScreen.cpp
ScreenBase.cpp
ScreenMgr.cpp
ScreenshotScreen.cpp
SelectFileScreen.cpp
SetEditorScreen.cpp
SnapToScreen.cpp
StackScreen.cpp
STEPOptionsScreen.cpp
STLOptionsScreen.cpp
SubGLWindow.cpp
TypeEditorScreen.cpp
UserParmScreen.cpp
VSPAEROScreen.cpp
VSPWindow.cpp
WingScreen.cpp
AdvLinkScreen.h
AwaveScreen.h
BlankScreen.h
CfdMeshScreen.h
ClippingScreen.h
CompGeomScreen.h
CustomScreen.h
DegenGeomScreen.h
DesignVarScreen.h
ExportScreen.h
FeaStructScreen.h
FitModelScreen.h
FuselageScreen.h
GroupLayout.h
GuiDevice.h
IGESOptionsScreen.h
ImportScreen.h
MainGLWindow.h
MainGLWindow.h
MainVSPScreen.h
ManageBackgroundScreen.h
ManageCORScreen.h
ManageGeomScreen.h
ManageLabelScreen.h
ManageLightingScreen.h
ManageTextureScreen.h
ManageViewScreen.h
MassPropScreen.h
MaterialEditScreen.h
MenuItem.h
MeshScreen.h
ParmDebugScreen.h
ParmLinkScreen.h
ParmScreen.h
PickSetScreen.h
PodScreen.h
ProjectionScreen.h
PSliceScreen.h
PtCloudScreen.h
ScreenBase.h
ScreenMgr.h
ScreenshotScreen.h
SelectFileScreen.h
SetEditorScreen.h
SnapToScreen.h
StackScreen.h
STEPOptionsScreen.h
STLOptionsScreen.h
SubGLWindow.h
TypeEditorScreen.h
UserParmScreen.h
VSPAEROScreen.h
VSPWindow.h
WingScreen.h
)


ADD_DEPENDENCIES(gui_and_draw
geom_core
vsp_graphic
screens
util
)

TARGET_LINK_LIBRARIES(gui_and_draw
${GLEW_LIBRARY}
vsp_graphic
)
